--- a/JSONSerializationDesrialization/packages.config
+++ b/JSONSerializationDesrialization/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="fastJSON" version="2.1.28" targetFramework="net46" />
   <package id="Jil" version="2.15.4" targetFramework="net46" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="ServiceStack" version="5.0.2" targetFramework="net46" />
   <package id="ServiceStack.Client" version="5.0.2" targetFramework="net46" />
@@ -9,4 +10,5 @@
   <package id="ServiceStack.Interfaces" version="5.0.2" targetFramework="net46" />
   <package id="ServiceStack.Text" version="5.0.2" targetFramework="net46" />
   <package id="Sigil" version="4.7.0" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="9.1.0" targetFramework="net46" />
 </packages>
